# awesome-cuda-cmake-demo

./: CMakeLists.txt  CMakePresets.json  README.md
